--- a/index.css
+++ b/index.css
@@ -3,15 +3,32 @@
     font-weight: 400;
     font-style: normal;
 }
+*:focus {
+    outline: none;
+    border: none;
+}
+*{
+    outline: none;
+    border: none;
+    margin: 0px;
+    scroll-behavior: smooth;
+}
 html,body{
     height: 100%;
     width: 100%;
-    background-color: #F3B9CA;
+    background-color: #56334F;
+    margin: 0px;
 }
 .sec1{
-    position: absolute;
+    position: relative;
+    top: 0px;
+    height: 100vh;
+    width: 100vw;
+}
+.conteudo{
+    position: relative;
     height: auto;
-    width: auto;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +44,7 @@ html,body{
 }
 
 .sec1 div{
-    color: #405941;
+    color: #A3D4FB;
     position: relative;
     display: flex;
     align-items: center;
