--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
 html,body{
     height: 100%;
     width: 100%;
-    background-color: #56334F;
+    background-color: #007d00;
     margin: 0px;
 }
 .sec1{
